[metadata]
name = tickit-devices
description = Devices for tickit, an event-based device simulation framework
url = https://github.com/dls-controls/tickit-devices
author = Dominic Oram
author_email = dominic.oram@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    tickit @ git+https://github.com/dls-controls/tickit.git

[options.extras_require]
# For development tests/docs
dev =
    black==22.3.0
    isort>5.0
    #See https://github.com/tholo/pytest-flake8/issues/87
    flake8<5.0 
    pytest-cov
    pytest-mypy
    pytest-flake8
    pytest-black
    pytest-asyncio
    pytest-pydocstyle
    flake8-isort
    pre-commit
    sphinx-rtd-theme-github-versions
    mock
    types-mock
    types-PyYAML
    aioca

# If you want to include data files in packages,
# either define [options.package_data] or
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.packages.find]
# Don't include our tests or examples directory in the distribution
exclude = 
    tests

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    # support typing.overload decorator
    F811, 
    # allow Annotated[typ, some_func("some string")]
    F722,

[pydocstyle]
# Make pydocstyle use google docstring format
convention = google
add-ignore =
    # Ignore missing docstrings in public modules
    D100, 
    # Ignore missing docstrings in public packages
    D104, 
    # Ignore missing docstrings in dunder methods; See: https://github.com/PyCQA/pydocstyle/issues/525
    D418,


[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --doctest-modules --pydocstyle --doctest-glob="*.rst"
     --cov=tickit_devices --cov-report term --cov-report xml:cov.xml

testpaths = 
    tickit_devices tests

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if sys.version_info
    if TYPE_CHECKING
    if False
    pass

[packages]
tickit-devices = {editable = true, path = "."}

[dev-packages]
tickit-devices = {editable = true, extras = ["dev"], path = "."}
